[tool.poetry]
name = "os-in-python"
version = "0.1.0"
description = ""
authors = ["xshen"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
click = "8.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
